--- a/index.html
+++ b/index.html
@@ -2,26 +2,14 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Exercicio htmk js</title>
+    <title>Exercício_plugins_jquery</title>
 </head>
 <body>
+    <header>
+        <h1 class="tituto__banner">Cadastro na EBAC Motors</h1>
+    </header>
     <main>
-        <h2 class="form__titulo">Emprestimo</h2>
-     <div class="container">
-        <form>
-            <label for="text">Digite seu salário:</label> 
-                <input type="text" id="Valor__um" class="caixa__texto" placeholder="Seu salário">
-                <label for="text">Digite o valor desejavel:</label>
-            <input type="text" id="Valor__dois" class="caixa__texto" placeholder="Valor do Emprestimo">
-            <p class="resultado__valor">Teste</p>
-            <input type="button" value="Enviar" onclick="verificar()" class="botao__enviar">
-        </form>
-     </div>
-
     </main>
-    <script src="main.js"></script>
 </body>
 </html>
