--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./CSS/style.css">
     <title>Exercício_plugins_jquery</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1 class="tituto__banner">Cadastro na EBAC Motors</h1>
+      <h1 class="tituto__banner">Cadastro na EBAC Motors</h1>
     </header>
     <main>
+      <form>
+        <div>
+          <label for="text">Nome completo: </label>
+          <input type="text" />
+        </div>
+        <div>
+          <label for="email">E-mail:</label>
+          <input type="email" />
+        </div>
+        <div>
+          <label for="tel">Telefone:</label>
+          <input type="tel" />
+        </div>
+        <div>
+          <label for="number">CPF:</label>
+          <input type="number" />
+        </div>
+        <div>
+          <label for="text">Endereço:</label>
+          <input type="text" />
+        </div>
+        <div>
+          <label for="text">CEP:</label>
+          <input type="text" />
+        </div>
+        <button type="submit">Cadastrar:</button>
+      </form>
     </main>
-</body>
+    <footer>
+
+    </footer>
+  </body>
 </html>
